@@ -7,6 +7,7 @@
   DataColumn.MaxLength (MySQL bug #62094, Oracle bug #12860224).
 - Modified MySQLParameter constructor to correctly assign IsNullable, Precision and Scale properties
   (MySQL bug #62194, Oracle bug #12999162).
+- Added changes to support some corner cases with nested TableFragments with limit clause (Take Linq operator) (MySQL bug #61729, Oracle bug #12776598).
 
 
 Version 6.2.5
